Moving to a "Request" Model

--- a/src/CoreModule/Resources/Views/help/module.twig
+++ b/src/CoreModule/Resources/Views/help/module.twig
@@ -5,7 +5,7 @@
 {{ command.name }} - {{ command.description }}
 {% endfor %}
 
-{% if command.isAdmin %}{% for command in module.commands if command.adminCommand %}
+{% if request.isAdmin %}{% for command in module.commands if command.adminCommand %}
 {{ command.name }} - Admin - {{ command.description }}
 {% endfor %}{% endif %}
 ```
